--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,17 +1,30 @@
-<div class="container">
+
   <section class="header">
-    <div class="row">
-      <div class="col-md-8">logo</div>
-      <div class="col-md-1">Features</div>
-      <div class="col-md-1">Download</div>
-      <div class="col-md-1">Feedback</div>
-      <div class="col-md-1">Help</div>
+
+    <div class="col-md-12 row">
+      <div class="col-md-9"><a href=".">logo</a></div>
+      <div class="col-md-1"><a href="#features">Features</a></div>
+      <div class="col-md-1"><a href="#download">Download</a></div>
+      <div class="col-md-1"><a href="#form">Feedback</a></div>
+    </div>
     <div class="row hero">
       <div class="col-md-12 name">Mathison</div>
-      <div class="col-md-12 description"> A self learning and evolving solution
-        to all your image sorting needs.
+      <div class="col-md-12 description">
+         A self learning and evolving solution to all your image sorting needs.
       </div>
-      <div class="col-md-2 download-btn"> DOWNLOAD </div>
+      <div class="col-md-8 long_description">
+        Select pictures and the Mathison will segregate them for you, classifying
+        what's in focus and what's not, so you can focus on what matters.
+      </div>
+      <div class="col-md-12 btn-container text-center">
+          <button class="download-btn"> DOWNLOAD </button>
+      </div>
+    </div>
+
+    <div class="row prototype" data-aos="slide-up" data-aos-delay="300">
+      <!-- software img -->
+      <div class="col-md-9 image center-block">
+        <img src="https://media.giphy.com/media/QvQw3P1CwhsFG/giphy.gif" />
+      </div>
     </div>
   </section>
-</div>
