--- a/_sass/mainpage.sass
+++ b/_sass/mainpage.sass
@@ -9,28 +9,67 @@
 @font-face
   font-family: Gotham_light
   src: url(Gotham-Light.otf)
+@font-face
+  font-family: Futura_bold
+  src: url(FuturaStd-Bold.otf)
 
-.container
-  color: white
-  .header
-    padding-top: 30px
+
+.header
+  padding-top: 50px
+  padding-bottom: 80px
+  font-family: Futura_bold
+  display: flex
+  flex-direction: column
+  align-items: center
+  .col-md-1
+    cursor: pointer
+    a
+      color: #202020
+  .hero
+    position: relative
+    text-align: center
     display: flex
     flex-direction: column
     align-items: center
-    .hero
-      text-align: center
-      .name
-        padding-top: 100px
-        padding-bottom: 30px
-        font-family: Gotham_bold
-        letter-spacing: 5
-        font-size: 50px
-      .description
-        font-size: 23px
-        font-family: Gotham_light
-        padding-bottom: 30px
-        color: #DCDCDD
+    .name
+      padding-top: 100px
+      padding-bottom: 30px
+      font-family: Gotham_bold
+      letter-spacing: 5
+      font-size: 50px
+    .description
+      font-size: 18px
+      font-family: Gotham_light
+      padding-bottom: 30px
+      color: #202020
+    .long_description
+      font-size: 16px
+      font-family: Gotham_light
+      padding-bottom: 50px
+      color: #202020
+    .btn-container
       .download-btn
-        color: #02C39A
-        padding: 20px
-        border: 2px solid #02C39A
+        color: white
+        background-color: #3ddcaa
+        border: none
+        font-family: Gotham_bold
+        font-size: 15px
+        letter-spacing: 2
+        padding: 15px 45px 15px 45px
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1)
+        &:hover
+          box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+          font-size: 18px
+  .prototype
+    width: 100%
+    padding-top: 70px
+    display: flex
+    flex-direction: column
+    align-items: center
+    .image
+      padding: 0
+      height: auto
+      box-shadow: 0px 0px 51px -13px rgba(32,32,32,0.60)
+      img
+        width: 100%
