--- a/css/main.scss
+++ b/css/main.scss
@@ -2,3 +2,10 @@
 ---
 
 @import "mainpage";
+@import "about";
+@import "download";
+@import "updatelog";
+@import "feedback";
+@import "footer";
+@import "allupdates";
+@import "alert";
