--- a/_includes/download.html
+++ b/_includes/download.html
@@ -11,7 +11,7 @@
           Fusce tincidunt iaculis neque nec dignissim. Integer turpis
           nisi, mattis et consequat quis, elementum vel justo.</h4>
 
-        <button class="download-btn" data-aos="fade-up" data-aos-delay="400"> DOWNLOAD </button>
+        <button class="download-btn" data-aos="fade-up" > DOWNLOAD </button>
 
         <h6> View the user guide </h6>
       </div>
