--- a/_includes/main.html
+++ b/_includes/main.html
@@ -28,7 +28,7 @@
          A self learning and evolving solution to all your image sorting needs.
       </div>
       <div class="col-md-8 long_description">
-        Select pictures and the Mathison will segregate them for you, classifying
+        Select pictures and Mathison will segregate them for you, classifying
         what's in focus and what's not, so you can focus on what matters.
       </div>
       <div class="col-md-12 btn-container text-center">
