--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,27 @@
 
   <div class="container">
     <div class="col-md-12 nav">
-      <div class="col-md-9"><a href="."> logo</a></div>
+      <div class="col-md-9"><a href=".">
+        <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+         width="20.000000pt" height="24.000000pt" viewBox="0 0 80.000000 84.000000"
+         preserveAspectRatio="xMidYMid meet">
+          <g transform="translate(0.000000,84.000000) scale(0.100000,-0.100000)"
+          fill="#fff" stroke="none">
+          <path d="M327 788 c-36 -29 -66 -58 -66 -64 -1 -6 19 -96 44 -200 24 -103 43
+          -190 41 -192 -2 -2 -75 29 -162 68 -88 40 -165 74 -171 77 -10 4 -13 -29 -13
+          -147 l0 -151 73 -90 72 -89 93 0 c50 0 92 2 92 5 0 3 -51 67 -114 143 -63 75
+          -113 138 -112 139 2 2 75 -31 164 -72 89 -41 165 -75 169 -75 5 1 25 15 45 33
+          l37 32 -19 76 c-31 119 -68 279 -65 279 2 0 58 -67 126 -149 136 -165 123
+          -159 196 -94 l42 38 -193 233 c-105 127 -197 237 -202 242 -7 7 -32 -6 -77
+          -42z"/>
+          </g>
+        </svg>
+      </a></div>
       <div class="col-md-1"><a href="#features">Features</a></div>
       <div class="col-md-1"><a href="#download">Download</a></div>
       <div class="col-md-1"><a href="#form">Feedback</a></div>
     </div>
-    <div class="col-md-12 copyright">Copy right shit</div>
+    <div class="col-md-12 copyright"></div>
   </div>
 
 </section>
