--- a/_sass/feedback.sass
+++ b/_sass/feedback.sass
@@ -17,6 +17,7 @@
     flex-direction: column
     align-items: center
     .feedback-form
+      max-width: 90%
       h4
         font-family: Gotham_reg
         font-size: 14px
@@ -26,6 +27,8 @@
         padding: 10px
         width: 100%
       textarea
+        max-width: 100%
+        max-height: 300px
         margin-bottom: 30px
         border: 1px solid #202020
 
